--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <div id="t3">t3</div>
     </div>
     <script src="DOM.js"></script>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> 页面用于展示，因此取消了main-->
 </body>
 
 </html>
