--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh">
 
 <head>
@@ -38,7 +38,7 @@
         <div id="t3">t3</div>
     </div>
     <script src="DOM.js"></script>
-    <script src="main.js"></script>
+    <script id="main"></script>
 </body>
 
 </html>
